# cpp-renderer

./: CMakeLists.txt
src/: geometry.cpp  geometry.hpp  main.cpp  math.cpp  math.hpp  obj.cpp  obj.h  renderer.cpp  renderer.hpp  scene.cpp
src/include/: geometry.hpp  math.hpp  obj.hpp  renderer.hpp  scene.hpp
